--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "browserslist": {
     "production": [
-      ">0.7%",
+      ">0.2%",
       "not dead",
       "not op_mini all"
     ],
     "development": [
-      ">0.7%",
-      "not dead",
-      "not op_mini all"
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "dependencies": {
@@ -79,6 +79,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "browserslist-to-esbuild": "^1.1.1",
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
     "eslint-plugin-react": "^7.30.1",
