--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,17 @@
   "lang": "fr",
   "icons": [
     {
-      "src": "favicon.ico",
+        "src": "/favicons/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    },
+    {
+        "src": "/favicons/android-chrome-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+    },
+    {
+      "src": "/favicons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
