--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "i18next": "^21.8.14",
     "leaflet": "^1.8.0",
     "lightbox-react": "^0.3.8",
+    "lottie-react": "^2.3.1",
     "moment": "^2.29.4",
     "pastel-color": "^1.0.3",
     "react": "^18.2.0",
@@ -66,6 +67,7 @@
     "react-mount-animation": "^0.0.11",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
+    "react-useanimations": "^2.0.8",
     "react-zoom-pan-pinch": "^2.1.3",
     "recoil": "^0.7.4",
     "tailwindcss-textshadow": "^2.1.3",
