--- a/package.json
+++ b/package.json
@@ -68,9 +68,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-useanimations": "^2.0.8",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.7",
-    "react-window-infinite-loader": "^1.0.8",
+    "react-virtuoso": "^2.17.2",
     "react-zoom-pan-pinch": "^2.1.3",
     "recoil": "^0.7.4",
     "tailwindcss-textshadow": "^2.1.3",
@@ -88,9 +86,6 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-linkify": "^1.0.1",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@types/react-window-infinite-loader": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "browserslist-to-esbuild": "^1.1.1",
