--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@juggle/resize-observer": "^3.4.0",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
     "broadcast-channel": "^4.13.0",
