--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "start-sw": "yarn run build && serve build",
     "test": "craco test",
     "eject": "craco eject",
-
     "ios-xcode-init": "cd ios/App && pod install",
     "ios-xcode-analyze": "cd ios/App && xcodebuild -scheme App -sdk iphonesimulator15.5 -workspace App.xcworkspace clean analyze",
     "build-android": "cd android && sh gradlew build",
@@ -107,6 +106,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.1.0",
+    "@ionic/cli": "^6.20.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/leaflet": "^1.7.11",
     "@types/lodash": "^4.14.184",
