--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/android": "4.1.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
+    "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "^4.1.0",
     "@capacitor/keyboard": "4.0.1",
