--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "eject": "craco eject",
     "ios-xcode-init": "cd ios/App && pod install",
     "ios-xcode-analyze": "cd ios/App && xcodebuild -scheme App -sdk iphonesimulator15.5 -workspace App.xcworkspace clean analyze",
-    "build-android": "cd android && sh gradlew build",
+    "build-android": "cd android && sh gradlew bundleRelease",
     "prebuild-ios": "ionic capacitor build ios --no-open --no-build",
     "prebuild-android": "ionic capacitor build android --no-open --no-build"
   },
