--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -23,6 +23,7 @@ end
 target 'App' do
   capacitor_pods
   # Add your Pods here
+  pod 'Firebase/Messaging' # Add this line
 end
 
 post_install do |installer|
