--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/status-bar": "4.0.1",
     "@capgo/capacitor-updater": "^3.3.20",
     "@craco/craco": "^6.4.5",
+    "@datadog/browser-rum": "^4.18.1",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
