--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
+    "react-hook-form": "^7.34.2",
     "react-i18next": "^11.18.1",
     "react-leaflet": "^4.0.1",
     "react-linkify": "^1.0.0-alpha",
